--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "scatch",
   "version": "1.0.0",
+  "description": "Blood Bank / EJS based project with Razorpay integration",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "config": "^4.1.1",
